# candle-mini-gpt

./: .gitignore  Cargo.toml  README.md  bpe_tokenizer_magical.json  build.rs  candle-mini-gpt.code-workspace  leader_bpe_tokenizer.json  mini_bpe.json
res/articles/: pretrain.txt  super_magical_emperior.txt  tokenizer_train.txt  十七号短文集[金庸客栈].txt  卧虎周评.txt  我们的武侠.txt  最后的守望者.txt  队长短文集 .simplified.txt
src/: data.rs  lib.rs
src/hello_ml/: mod.rs
src/transformer/: feed_forward.rs  gpt.rs  head.rs  mod.rs  multi_head.rs  rotary_emb.rs  trans.rs
