[package]
name = "candle_transformer"
version = "0.1.0"
edition = "2021"

[lib]
name = "candle_transformer"

[toolchain]
channel = "nightly"
[[bin]]
name = "hello_ml"
path = "src/bin/hello_ml.rs"

[[bin]]
name = "tokenizer_train"
path = "src/bin/tokenizer_train.rs"

[dependencies]
candle-core = { version = "0.8.2", path = "candle/candle-core", features = ["metal"] }
candle-nn = { version = "0.8.2", path = "candle/candle-nn", features = ["metal"] }
walkdir = "2.5"

tokenizers = "0.21"

anyhow = "1.0"
opencc-rust = "1.1.19"
