[package]
name = "candle-mini-gpt"
version = "0.1.0"
edition = "2021"

[lib]
name = "candle_mini_gpt"

[toolchain]
channel = "nightly"
[[bin]]
name = "hello_ml"
path = "src/bin/hello_ml.rs"

[[bin]]
name = "tokenizer_train"
path = "src/bin/tokenizer_train.rs"

[[bin]]
name = "trainer"
path = "src/bin/model_trainer.rs"

[dependencies]
candle-core = { version = "0.8.2", path = "candle/candle-core" }
candle-nn = { version = "0.8.2", path = "candle/candle-nn" }
candle-transformers = { version = "0.8.2", path = "candle/candle-transformers" }

walkdir = "2.5"

tokenizers = "0.21"

anyhow = "1.0"
opencc-rust = "1.1.19"
rand = "0.9"


log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
